[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=75", "setuptools-scm[toml]>=8" ]

[project]
name = "noel-textures-py"
description = "Dash app to generate textures maps from MRI"
readme = "README.md"
keywords = [ "ANTsPy", "Dash", "MRI", "texture maps" ]
license = { file = "LICENSE" }
authors = [
  { name = "NOEL-MNI", email = "ravnoor.gill@mail.mcgill.ca" },
]
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]

dependencies = [
  "dash>=3.3,<5",
  "dash-bootstrap-components>=2.0.4,<3",
  "flask>=3.0.3,<4",
  "matplotlib>=3.9.2,<4",
  "numpy>=1.26.4",
  "pandas>=2.2.3,<4",
  "pillow>=12,<13",
]

urls.Documentation = "https://noel-mni.github.io/noelTexturesPy"
urls.Homepage = "https://github.com/NOEL-MNI/noelTexturesPy"
scripts.textures_app = "noelTexturesPy.app:main"
scripts.textures_cli = "noelTexturesPy.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.19,<2",
  "pyprojroot>=0.3,<0.4",
  "pytest>=9.0.2,<10",
  "pytest-xdist>=3.8,<4",
]
ants = [
  "antspynet>=0.3.1",
  "antspyx>=0.6.2",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = [ "src" ]
include = [ "noelTexturesPy*" ]
exclude = [ "web*", "docker*", "images*", "templates*", "docs*", "build*", ".pixi*", ".github*" ]

[tool.setuptools_scm]
write_to = "src/noelTexturesPy/_version.py"
fallback_version = "0.2.2"
version_scheme = "no-guess-dev"

[tool.ruff]
format.quote-style = "single"
lint.select = [
  "B",
  "E",
  "F",
  "I",
  "W",
]
lint.ignore = [
  "E203",
  "E501",
  "N813",
]
lint.isort.force-single-line = true
lint.preview = true

[tool.pytest.ini_options]
addopts = [ "-n", "auto", "-v" ]
testpaths = [ "tests" ]
pythonpath = [ "src" ]

[tool.mypy]
pretty = true

[[tool.mypy.overrides]]
module = "dash_bootstrap_components.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dash.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ants.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "antspynet.*"
ignore_missing_imports = true
