[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=75" ]

[project]
name = "noel-textures-py"
version = "1.0.1"
description = "Dash app to generate textures maps from MRI"
readme = "README.md"
keywords = [ "ANTsPy", "Dash", "MRI", "texture maps" ]
license = { file = "LICENSE" }
authors = [
  { name = "NOEL-MNI", email = "ravnoor.gill@mail.mcgill.ca" },
]
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "dash>=3.3,<5",
  "dash-bootstrap-components>=2.0.4,<3",
  "flask>=3.0.3,<4",
  "matplotlib>=3.9.2,<4",
  "numpy>=1.26.4",
  "pandas>=2.2.3,<4",
  "pillow>=12,<13",
]
optional-dependencies.ants = [ "antspyx>=0.6.3,<0.7", "antstorch" ]
urls.Documentation = "https://noel-mni.github.io/noelTexturesPy"
urls.Homepage = "https://github.com/NOEL-MNI/noelTexturesPy"
scripts.textures_app = "noelTexturesPy.app:main"
scripts.textures_cli = "noelTexturesPy.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.19,<2",
  "pyprojroot>=0.3,<0.4",
  "pytest>=9.0.2,<10",
  "pytest-xdist>=3.8,<4",
]

# antstorch = { path = "./deps/ANTsTorch", package = false }
[tool.setuptools]
packages.find.where = [ "src" ]
packages.find.include = [ "noelTexturesPy*" ]
packages.find.exclude = [ ".github*", ".pixi*", "build*", "docker*", "docs*", "images*", "templates*", "web*" ]
include-package-data = false

[tool.uv]
sources.antstorch = { git = "https://github.com/ravnoor/ANTsTorch.git", branch = "textures-deps" }
environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux' and platform_machine == 'aarch64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.ruff]
format.quote-style = "single"
lint.select = [
  "B",
  "E",
  "F",
  "I",
  "W",
]
lint.ignore = [
  "E203",
  "E501",
  "N813",
]
lint.isort.force-single-line = true
lint.preview = true

[tool.mypy]
pretty = true
overrides = [
  { module = "dash_bootstrap_components.*", ignore_missing_imports = true },
  { module = "dash.*", ignore_missing_imports = true },
  { module = "ants.*", ignore_missing_imports = true },
  { module = "antstorch.*", ignore_missing_imports = true },
  { module = "numpy.*", ignore_missing_imports = true },
  { module = "matplotlib.*", ignore_missing_imports = true },
  { module = "flask.*", ignore_missing_imports = true },
]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.pythonpath = [ "src" ]
ini_options.addopts = [ "-n", "auto", "-v" ]

[tool.tox]
env_list = [ "format", "lint", "pytest", "types" ]
env.format.commands = [ [ "ruff", "format", "--diff" ] ]
env.format.deps = [ "ruff" ]
env.format.description = "Run code formatter"
env.format.skip_install = true
env.lint.commands = [ [ "ruff", "check" ] ]
env.lint.deps = [ "ruff" ]
env.lint.description = "Run code linter"
env.lint.skip_install = true
env.pytest.commands = [
  [ "pytest", "--durations=0", "--capture=no", "--cov=noelTexturesPy", "--cov-report=xml", "{posargs}" ],
]
env.pytest.deps = [
  "matplotlib",
  "parameterized",
  "Pillow",
  "pytest",
  "pytest-cov",
  "pytest-sugar",
]
env.types.commands = [
  [ "mypy", "--install-types", "--non-interactive", "src" ],
]
env.types.deps = [ "mypy", "pip" ]

# ── python-semantic-release ──────────────────────────────────────────────
[tool.semantic_release]
tag_format = "v{version}"
major_on_zero = true
allow_zero_version = true
version_variables = [
  "src/noelTexturesPy/__init__.py:__version__",
]
version_toml = [
  "pixi.toml:workspace.version",
  "pyproject.toml:project.version",
]
build_command = "pip install uv && uv build --sdist --wheel"
commit_message = "chore(release): v{version}"
commit_parser = "conventional"
branches.main.match = "main"
branches.main.prerelease = false
changelog.default_templates.changelog_file = "CHANGELOG.md"
changelog.default_templates.mask_initial_release = true
changelog.default_templates.output_format = "md"
changelog.exclude_commit_patterns = [
  'chore(?:\([^)]*?\))?: .+',
  'ci(?:\([^)]*?\))?: .+',
  'refactor(?:\([^)]*?\))?: .+',
  'style(?:\([^)]*?\))?: .+',
  'test(?:\([^)]*?\))?: .+',
  'build\((?!deps: .+)\)',
  "Initial [Cc]ommit.*",
]
changelog.mode = "update"
remote.token = { env = "GH_TOKEN" }
remote.type = "github"
